# store-management-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  postgresql-ddl-file.sql  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci-cd.yml
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 75bbc2f1121a_initial_migration.py  b207841bd500_rename_orders_table_to_order_for_naming_.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/crud/: category.py  client.py  employee.py  order.py  product.py
backend/app/models/: category.py  clients.py  employee.py  order.py  order_product.py  product.py
backend/app/routers/: category.py  clients.py  employees.py  health.py  orders.py  products.py
backend/app/schemas/: category.py  client.py  employee.py  order.py  product.py
backend/tests/: conftest.py  test_categories.py  test_clients.py  test_employees.py  test_health.py  test_orders.py  test_products.py
ecs/: taskdef.json
