[project]
name = "store-management-api"
version = "1.0.0"
description = "Enterprise-grade Store Management API"
requires-python = ">=3.11"

[tool.ruff]
# Set line length to 88 (Black-compatible default)
line-length = 88

# Target Python 3.11
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
    "dist",
    "build",
    "alembic/versions",
]

[tool.ruff.lint]
# Enable common rule sets:
# E/W = pycodestyle errors/warnings
# F = Pyflakes
# I = isort (import sorting)
# N = pep8-naming
# UP = pyupgrade
# B = flake8-bugbear
select = ["E", "F", "W", "I", "N", "UP", "B"]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends pattern)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"backend/alembic/env.py" = ["E402"]  # Module level import not at top (required for Alembic)
"backend/tests/*.py" = ["N806"]  # Allow uppercase variable names in tests

# Allow autofix for specific rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with 4 spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
# Group imports: standard library, third-party, first-party
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing"
